--- a/components/table/index.html
+++ b/components/table/index.html
@@ -2707,7 +2707,7 @@ ReactDOM.render(<span class="xml"><span class="hljs-tag">&lt;<span class="hljs-t
   </div>
   <div class="code-box-meta markdown">
     <div class="code-box-title">
-      <a href="#demo-paging-columns">滚屏分页的列</a>
+      <a href="#demo-paging-columns">横向滚屏表格</a>
     </div>
     <p>对于列数很多的数据，可以进行横向的分页，通过切换符切换当前展现的列。</p>
     <span class="collapse anticon anticon-circle-o-right" unselectable="none" style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;"></span>
@@ -2945,8 +2945,8 @@ ReactDOM.render(
     </a>
   </li>
   <li>
-    <a title="滚屏分页的列" href="#demo-paging-columns">
-      <span>滚屏分页的列</span>
+    <a title="横向滚屏表格" href="#demo-paging-columns">
+      <span>横向滚屏表格</span>
     </a>
   </li>
   <li>
