--- a/components/calendar/index.html
+++ b/components/calendar/index.html
@@ -745,7 +745,7 @@ ReactDOM.render(
 var _antd = require('antd');
 
 function getListData(value) {
-  var listData = undefined;
+  var listData = void 0;
   switch (value.getDayOfMonth()) {
     case 8:
       listData = [{ type: 'warn', content: '这里是警告事项.' }, { type: 'normal', content: '这里是普通事项.' }];break;
