--- a/components/select/demo/search-box.html
+++ b/components/select/demo/search-box.html
@@ -22,8 +22,8 @@ function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { de
 
 var Option = _antd.Select.Option;
 
-var timeout = undefined;
-var currentValue = undefined;
+var timeout = void 0;
+var currentValue = void 0;
 
 function fetch(value, callback) {
   if (timeout) {
