--- a/components/tree/index.html
+++ b/components/tree/index.html
@@ -967,14 +967,14 @@ var Demo = React.createClass({
       });
     };
     var data = [].concat(_toConsumableArray(this.state.gData));
-    var dragObj = undefined;
+    var dragObj = void 0;
     loop(data, dragKey, function (item, index, arr) {
       arr.splice(index, 1);
       dragObj = item;
     });
     if (info.dropToGap) {
-      var ar = undefined;
-      var i = undefined;
+      var ar = void 0;
+      var i = void 0;
       loop(data, dropKey, function (item, index, arr) {
         ar = arr;
         i = index;
